--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "Marzuk",
   "license": "ISC",
   "dependencies": {
+    "@sendgrid/mail": "^7.4.2",
     "bcrypt": "^5.0.0",
     "config": "^3.3.3",
     "connect-flash": "^0.1.1",
@@ -22,7 +23,9 @@
     "express-validator": "^6.9.2",
     "mongoose": "^5.11.15",
     "morgan": "^1.10.0",
-    "multer": "^1.4.2"
+    "multer": "^1.4.2",
+    "nodemailer": "^6.5.0",
+    "nodemailer-sendgrid-transport": "^0.2.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.7"
