--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "morgan": "^1.10.0",
     "multer": "^1.4.2",
     "nodemailer": "^6.5.0",
-    "nodemailer-sendgrid-transport": "^0.2.0"
+    "nodemailer-sendgrid-transport": "^0.2.0",
+    "xlsx": "^0.17.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.7"
