move sendgrid api key to environment variable

--- a/default.env
+++ b/default.env
@@ -1,3 +1,4 @@
 dbUser = project database user name
 dbUserPass = project database user password
+sgMailAPIKey = sendgrid api key
 secret = project secret key
