sendgrid api key separate

--- a/default.env
+++ b/default.env
@@ -1,3 +1,4 @@
+dbName = project database name
 dbUser = project database user name
 dbUserPass = project database user password
 sgMailAPIKey = sendgrid api key
