--- a/default.env
+++ b/default.env
@@ -3,3 +3,5 @@ dbUser = project database user name
 dbUserPass = project database user password
 sgMailAPIKey = sendgrid api key
 secret = project secret key
+
+PORT
