--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "multer": "^1.4.2",
     "nodemailer": "^6.5.0",
     "nodemailer-sendgrid-transport": "^0.2.0",
+    "socket.io": "^4.2.0",
     "xlsx": "^0.17.0"
   },
   "devDependencies": {
