--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "express": "^4.17.1",
     "express-session": "^1.17.1",
     "express-validator": "^6.9.2",
+    "http-errors": "^1.8.0",
     "moment": "^2.29.1",
     "mongoose": "^5.11.15",
     "morgan": "^1.10.0",
